--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "backend-factus",
   "module": "index.ts",
   "type": "module",
-    "scripts": {
-        "dev": "bun run src/index.ts",
-        "build": "bun run src/index.ts --outdir dist",
-    },
+  "scripts": {
+    "dev": "bun run src/index.ts",
+    "build": "bun run src/index.ts --outdir dist"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/node": "^22.10.10",
@@ -13,5 +13,12 @@
   },
   "peerDependencies": {
     "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.2.1",
+    "@types/express": "^5.0.0",
+    "express": "^4.21.2",
+    "pg": "^8.13.1",
+    "prisma": "^6.2.1"
   }
 }
