feat: connect and fetchFacturas

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "dev": "bun run src/index.ts",
+    "dev": "bun run src/server.ts",
     "build": "bun run src/index.ts --outdir dist"
   },
   "devDependencies": {
@@ -16,7 +16,11 @@
   },
   "dependencies": {
     "@prisma/client": "^6.2.1",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "axios": "^1.7.9",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "pg": "^8.13.1",
     "prisma": "^6.2.1"
