--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
-    "prisma": "^6.2.1"
+    "prisma": "^6.2.1",
+    "zod": "^3.24.1"
   }
 }
